Fixing a weird(est) git problem where it does not recognize HotspotController.js -> hotspotcontroller.js as a rename

--- a/src/main/resources/templates/findhotspots.html
+++ b/src/main/resources/templates/findhotspots.html
@@ -30,7 +30,7 @@
 
     <script src="/js/angular.js"></script>
     <script src="/js/angular-route.js"></script>
-    <script src="/js/hotspotcontroller.js"></script>
+    <script src="/js/hotspotcontroller1.js"></script>
 </head>
 <body>
 <div data-ng-app='hotspotsfinderapp'>
